Remove Windows.java Load updated automodpack without restart Update gradle to 8.3.0 Update fapi to 0.90.0+1.20.2